--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,4 @@
-set -g prefix C-space
-unbind C-b
+#set -g prefix C-space
 set -g base-index 1
 set -g pane-base-index 1
 set -g default-terminal "screen-256color"
@@ -13,3 +12,12 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
+# Make mouse useful in copy mode
+#setw -g mode-mouse on
+
+# Allow mouse to select which pane to use
+#set -g mouse-select-pane on
+
+# Allow mouse to select windows
+#set -g mouse-select-window on
