Add vim mappings to tmux visual mode

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,10 +14,21 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # Make mouse useful in copy mode
-#setw -g mode-mouse on
+#setw -g mouse on
+
+setw -g aggressive-resize on
 
 # Allow mouse to select which pane to use
 #set -g mouse-select-pane on
 
 # Allow mouse to select windows
 #set -g mouse-select-window on
+
+# Set vi keybindings for copy mode
+setw -g mode-keys vi
+
+# Use v to trigger selection    
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+
+# Use y to yank current selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
