[TMUX] Reload tmux configuration with C-b r

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,8 @@ bind l select-pane -R
 
 bind S set synchronize-panes
 
+bind r source-file ~/.tmux.conf\; display "Reloaded!"
+
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
