[TMUX] Add shortcuts to plit tmux windows

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,6 +12,10 @@ bind S set synchronize-panes
 
 bind r source-file ~/.tmux.conf\; display "Reloaded!"
 
+# splitting panes
+bind | split-window -h
+bind - split-window -v
+
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
