--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,6 +21,13 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+# Create tmp window
+unbind Up
+bind Up new-window -d -n tmp\; swap-pane -s tmp.1 \; select-window -t tmp
+
+unbind Down
+bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
+
 # Make mouse useful in copy mode
 #setw -g mouse on
 
