--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -57,29 +57,33 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # status bar theme
 
-set -g status-bg 'colour235'
-#set -g message-command-fg 'colour222'
-set -g status-justify 'centre'
-set -g status-left-length '100'
-set -g status 'on'
-#set -g pane-active-border-fg 'colour154'
-#set -g message-bg 'colour238'
-#set -g status-right-length '100'
-#set -g status-right-attr 'none'
-#set -g message-fg 'colour222'
-#set -g message-command-bg 'colour238'
-#set -g status-attr 'none'
-#set -g status-utf8 'on'
-#set -g pane-border-fg 'colour238'
-#set -g status-left-attr 'none'
-#setw -g window-status-fg 'colour121'
-#setw -g window-status-attr 'none'
-#setw -g window-status-activity-bg 'colour235'
-#setw -g window-status-activity-attr 'none'
-#setw -g window-status-activity-fg 'colour154'
-setw -g window-status-separator ''
-#setw -g window-status-bg 'colour235'
-#set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #W #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] #(whoami)  #(uptime  | cut -d " " -f 1,2,3) #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
-#set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] %r  %a  %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #H #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour232,bg=colour154] #(rainbarf --battery --remaining --no-rgb) '
-#setw -g window-status-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
-#setw -g window-status-current-format '#[fg=colour235,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #I  #W  #F #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]'
+#### COLOUR (Solarized 256)
+
+# default statusbar colors
+set-option -g status-style fg=colour136,bg=colour235 #yellow and base02
+
+# default window title colors
+set-window-option -g window-status-style fg=colour244,bg=default #base0 and default
+#set-window-option -g window-status-style dim
+
+# active window title colors
+set-window-option -g window-status-current-style fg=colour166,bg=default #orange and default
+#set-window-option -g window-status-current-style bright
+
+# pane border
+set-option -g pane-border-style fg=colour235 #base02
+set-option -g pane-active-border-style fg=colour240 #base01
+
+# message text
+set-option -g message-style fg=colour166,bg=colour235 #orange and base02
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
+# bell
+set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
+
